# qtc-blockchain

./: CMakeLists.txt  LICENSE  README.md  create_all_files.sh  defi_api.py  defi_demo  install_defi.sh  integration_script.sh  main.cpp  qtc_advanced  quick_setup.sh  rpc_server.py  show_structure.sh
include/contracts/: VirtualMachine.h
include/crypto/: ZKProof.h
include/defi/: DeFiSystem.h
include/network/: P2PNode.h
include/rpc/: RPCServer.h
qtc-mainnet/: QTC.bat  RUN_NODE.bat  RUN_QTC.bat  START.bat  qtc.conf  qtc.cpp  qtc_stable.bat  simple_qtc_setup.sh  step1_build_mainnet.sh  step2_gui_wallet.cpp  step3_package.sh
qtc-mainnet/QTC-Core-Universal/: README.txt  qtc_linux  qtc_windows.bat
qtc-mainnet/QTC_BLOCKCHAIN_FINAL/: QTC_BLOCKCHAIN.bat  README.txt
qtc-mainnet/QTC_FINAL/: QTC_MINER_FINAL.bat  README.txt
qtc-mainnet/release/: INSTALL_WINDOWS.bat  MINE_NOW.bat  QTC_v2.bat  README.txt  START_MINING.bat  export_private_key.bat  qtc_continuous_mining.bat
src/: main_advanced.cpp  main_defi.cpp  main_full.cpp
src/contracts/: VirtualMachine.cpp
src/crypto/: ZKProof.cpp
src/defi/: DeFiSystem.cpp
src/network/: P2PNode.cpp
src/rpc/: RPCServer.cpp  RPCServer_working.cpp
web/: app.js  defi.html  index.html  index_connected.html  style.css
